Fix CORS - clean up config files